<resources>
    <string name="app_name">RRDemo</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_logo_description">Bedford Falls logo in white</string>
    <string name="bg_logo_description">Bedford Falls logo in light gray</string>
    <string name="zeroth_fragment_label">Classroom</string>
    <string name="student_button_label">Student %s</string>
    <string name="first_fragment_label">Book Cart</string>
    <string name="remove_button_label">×</string>
    <string name="finished_cart_label">Finished</string>
    <string name="place_order_label">Place Order</string>
    <string name="lexile_label">Lexile</string>
    <string name="level_label">Level</string>
    <string name="dra_label">DRA</string>
    <string name="cart_number_label">Books in cart:</string>
    <string name="cart_total_price_label">Cart total:</string>
    <string name="class_cart_total_price_label">Class cart total:</string>
    <string name="isbn_not_found_message">ISBN not found: %s.</string>
    <string name="cart_full_message">Cart is full.</string>
    <string name="primary_cart_label">Primary Cart</string>
    <string name="backup_cart_label">Backup Cart</string>
    <string name="second_fragment_label">Demo Complete</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="reset_demo">Submit and Reset Demo</string>
    <string name="demo_complete">Congratulations! You have completed the demo.</string>
    <string name="pitch_text">We\'d love to reach out to you about the books you selected.</string>
    <string name="hello_first_fragment">Hello, World!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="student_button_desc">Select student</string>
    <string name="name_entry_hint">Name (Optional)</string>
    <string name="email_entry_hint">Email (Optional)</string>
    <string name="phone_input_hint">Phone (Optional)</string>
</resources>