<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".component.FirstFragment">

    <TextView
        android:id="@+id/primary_cart_explanation"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="390dp"
        android:text="@string/primary_cart_label"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="?attr/textAppearanceHeadline3" />

    <TextView
        android:id="@+id/backup_cart_explanation"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="90dp"
        android:text="@string/backup_cart_label"
        android:background="@color/backupCart"
        app:layout_constraintTop_toBottomOf="@id/primary_cart_explanation"
        android:textAppearance="?attr/textAppearanceHeadline3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_cart"
        android:layout_width="match_parent"
        android:layout_height="1215sp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/summary_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/cardview_light_background">

        <TextView
            android:id="@+id/textview_items_in_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cart_number_label"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/textview_number_in_cart"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/textview_total_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cart_total_price_label"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/textview_price_sum"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <Button
            android:id="@+id/finished_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/finished_cart_label"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textAppearance="?attr/textAppearanceHeadline6" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>